[gd_scene load_steps=17 format=2]

[ext_resource path="res://Slice/Characters/Player.gd" type="Script" id=1]
[ext_resource path="res://Slice/Characters/Properties/Inventory.gd" type="Script" id=2]
[ext_resource path="res://Slice/Characters/Properties/Vitals.gd" type="Script" id=3]
[ext_resource path="res://Slice/Characters/Properties/Physics.gd" type="Script" id=4]
[ext_resource path="res://Slice/Characters/ContextualComponents/ExplorationComponents.gd" type="Script" id=5]
[ext_resource path="res://Slice/Characters/ContextualComponents/CombatComponents.gd" type="Script" id=6]
[ext_resource path="res://Slice/Characters/States/Combat/Idle.gd" type="Script" id=7]
[ext_resource path="res://Slice/Characters/States/Combat/Walk.gd" type="Script" id=8]
[ext_resource path="res://Slice/Characters/States/Combat/Jump.gd" type="Script" id=9]
[ext_resource path="res://Slice/Characters/States/Combat/Crouch.gd" type="Script" id=10]
[ext_resource path="res://Slice/Characters/States/Exploration/Idle.gd" type="Script" id=11]
[ext_resource path="res://Slice/Characters/States/Exploration/Walk.gd" type="Script" id=12]
[ext_resource path="res://Slice/Characters/States/Exploration/Jump.gd" type="Script" id=13]
[ext_resource path="res://Slice/Characters/States/Exploration/Crouch.gd" type="Script" id=14]

[sub_resource type="CapsuleShape2D" id=1]
radius = 15.9434
height = 58.7845

[sub_resource type="CircleShape2D" id=2]
radius = 76.1124

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="Inventory" type="Node2D" parent="."]
script = ExtResource( 2 )

[node name="Vitals" type="Node2D" parent="."]
script = ExtResource( 3 )

[node name="Physics" type="Node2D" parent="."]
script = ExtResource( 4 )

[node name="Collider" type="CollisionShape2D" parent="."]
position = Vector2( -0.475655, 2.85392 )
shape = SubResource( 1 )

[node name="ExplorationComponents" type="Node2D" parent="."]
script = ExtResource( 5 )

[node name="InteractionRadius" type="Area2D" parent="ExplorationComponents"]

[node name="InteractionShape" type="CollisionShape2D" parent="ExplorationComponents/InteractionRadius"]
shape = SubResource( 2 )

[node name="CombatComponents" type="Node2D" parent="."]
visible = false
script = ExtResource( 6 )

[node name="States" type="Node2D" parent="."]

[node name="Combat" type="Node2D" parent="States"]

[node name="Idle" type="Node2D" parent="States/Combat"]
script = ExtResource( 7 )

[node name="Walk" type="Node2D" parent="States/Combat"]
script = ExtResource( 8 )

[node name="Jump" type="Node2D" parent="States/Combat"]
script = ExtResource( 9 )

[node name="Crouch" type="Node2D" parent="States/Combat"]
script = ExtResource( 10 )

[node name="Exploration" type="Node2D" parent="States"]

[node name="Idle" type="Node2D" parent="States/Exploration"]
script = ExtResource( 11 )

[node name="Walk" type="Node2D" parent="States/Exploration"]
script = ExtResource( 12 )

[node name="Jump" type="Node2D" parent="States/Exploration"]
script = ExtResource( 13 )

[node name="Crouch" type="Node2D" parent="States/Exploration"]
script = ExtResource( 14 )

[node name="PolySprite" type="Node2D" parent="."]
editor/display_folded = true

[node name="Polygon2D8" type="Polygon2D" parent="PolySprite"]
position = Vector2( 21.5206, -29.9897 )
rotation = -1.18886
scale = Vector2( 1.28782, 1.25734 )
color = Color( 0.552941, 0.552941, 0.552941, 1 )
polygon = PoolVector2Array( -18.1753, 5.1542, -17.839, 6.47879, -17.0048, 7.29847, -14.0515, 7.17133, -12.3938, 5.70161, -12.5342, 4.59651, -14.4218, 5.07638, -15.7796, 5.36734 )

[node name="Polygon2D2" type="Polygon2D" parent="PolySprite"]
position = Vector2( 2.9895, 4.55952 )
scale = Vector2( 1, 1.086 )
color = Color( 0.243137, 0, 0, 1 )
polygon = PoolVector2Array( -0.951302, -53.0155, -4.60514, -53.6273, -7.26247, -51.1804, -6.26597, -44.9102, -6.59814, -41.8879, -11.7467, -39.0645, -24.0369, -21.1275, -24.7012, -17.9719, -21.3796, -2.19402, -21.8778, -0.201012, -21.3796, 1.62591, -18.224, 2.62241, -15.2345, 0.961571, -15.8988, -4.02094, -16.7292, -4.02094, -18.3901, -16.9754, -14.9023, -21.9579, -12.7432, -14.4842, -12.7432, -14.4842, -12.5771, -5.01743, -12.5771, -1.69576, -12.6856, 18.2976, -25.0334, 41.3198, -25.3656, 43.4789, -24.527, 44.9354, -16.283, 44.9354, -15.3836, 42.3131, -17.0324, 40.2428, -5.26947, 21.3898, -2.44605, 0.795486, 3.0347, 21.0577, 2.70253, 42.4824, 3.53295, 43.645, 5.35986, 44.1433, 14.8266, 44.4754, 15.9892, 42.1503, 10.5085, 38.6625, 11.1728, 17.9021, 4.52945, -3.3566, 3.20078, -15.3146, 12.5014, -9.83385, 16.1553, -9.3356, 18.1483, -10.166, 19.3109, -13.6538, 17.9822, -16.6433, 13.664, -17.1415, 11.8371, -16.6433, 4.19728, -22.4562, 4.19728, -29.9299, 6.19028, -33.9159, 5.52595, -38.068, 2.70253, -41.0575, 3.69903, -47.7009 )

[node name="Polygon2D" type="Polygon2D" parent="PolySprite"]
position = Vector2( 1.75838, 0.692505 )
color = Color( 0.552941, 0.552941, 0.552941, 1 )
polygon = PoolVector2Array( -2.77822, -53.5138, -1.94495, -42.0844, 2.70164, -39.3863, 4.65022, -40.7353, 5.19379, -43.7149, 5.19379, -51.5208, 0.902969, -55.2747, -1.79506, -55.1248 )

[node name="Polygon2D3" type="Polygon2D" parent="PolySprite"]
position = Vector2( -1.23112, 1.24418 )
color = Color( 0, 0.886275, 0.976471, 1 )
polygon = PoolVector2Array( 3.8757, -50.9865, 5.85221, -50.3582, 7.07265, -49.9645, 8.17324, -49.9121, 8.14118, -47.2062, 7.28229, -46.8462, 5.76243, -46.7676, 4.03293, -46.8724 )

[node name="Polygon2D4" type="Polygon2D" parent="PolySprite"]
position = Vector2( -8.75635, -34.7603 )
color = Color( 0.552941, 0.552941, 0.552941, 1 )
offset = Vector2( 8.75635, 34.7603 )
polygon = PoolVector2Array( -6.06327, -39.9156, -9.44885, -38.0689, -13.8347, -30.99, -13.2192, -29.605, -10.4491, -30.0667, -3.67798, -36.6839, -4.13965, -38.5306 )

[node name="Polygon2D5" type="Polygon2D" parent="PolySprite"]
position = Vector2( 12.7841, 24.4725 )
rotation = 3.7938
scale = Vector2( 0.982833, -1.20712 )
color = Color( 0.552941, 0.552941, 0.552941, 1 )
offset = Vector2( 8.75635, 34.7603 )
polygon = PoolVector2Array( -6.06327, -39.9156, -9.44885, -38.0689, -13.8347, -30.99, -13.2192, -29.605, -10.4491, -30.0667, -3.67798, -36.6839, -4.13965, -38.5306 )

[node name="Polygon2D6" type="Polygon2D" parent="PolySprite"]
position = Vector2( -2.89265, 25.5261 )
rotation = 4.05252
scale = Vector2( 0.977547, -1.2044 )
color = Color( 0.552941, 0.552941, 0.552941, 1 )
offset = Vector2( 8.75635, 34.7603 )
polygon = PoolVector2Array( -6.06327, -39.9156, -9.44885, -38.0689, -13.8347, -30.99, -13.2192, -29.605, -10.4491, -30.0667, -3.67798, -36.6839, -4.13965, -38.5306 )

[node name="Polygon2D7" type="Polygon2D" parent="PolySprite"]
color = Color( 0.552941, 0.552941, 0.552941, 1 )
polygon = PoolVector2Array( -18.7863, 5.17336, -18.4468, 6.6282, -15.6342, 7.59809, -14.1793, 7.40411, -11.7061, 5.65831, -12.1426, 4.25197, -14.4218, 5.07638, -15.7796, 5.36734 )
[connection signal="area_entered" from="ExplorationComponents/InteractionRadius" to="." method="_on_InteractionRadius_area_entered"]
[connection signal="area_exited" from="ExplorationComponents/InteractionRadius" to="." method="_on_InteractionRadius_area_exited"]
